# MagicMirror

./: .gitignore  LICENSE  Makefile_linux  db_connector.py  file_paths.py  pyproject.toml
src/: api_endpoints.py  db_connector.py  load_all_data.py  market_changes_data.py  python_helper.py  suggest_price.py  textual_data.py  trading_butter.py  vpi_data.py
src/helper_files/: db_connector.py
