[tool.poetry]
name = "vocab-builder"
version = "0.1.0"
description = "A project to help build vocabulary efficiently."
authors = ["Robin <robin@vespertool.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
